# queue_alert

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  queueLogo.psd
docs/: architecture.md
queue_alert_frontend/app/: package-lock.json  package.json
queue_alert_frontend/app/public/: index.html  manifest.json
queue_alert_frontend/app/src/: App.css  App.test.tsx  App.tsx  index.css  index.tsx  react-app-env.d.ts  reportWebVitals.ts  service-worker.ts  serviceWorkerRegistration.ts  setupTests.ts
queue_alert_frontend/app/src/api/: alertConfig.ts  queueAlertAccess.ts  serviceWorker.ts  useEffectCallback.tsx
queue_alert_frontend/app/src/components/: About.tsx  ConfigReducer.ts  ConfigSaveButton.tsx  ConfigStore.tsx  Error.tsx  Faq.tsx  Home.tsx  Park.tsx  QASpinner.tsx  RideConfig.tsx  Search.tsx  SharedHome.tsx  SideBar.tsx  Spinner.tsx  UseConfigSave.tsx  configTable.tsx  hamburger.tsx  qaUrlStore.tsx
queue_alert_server/: Cargo.toml
queue_alert_server/sql/: init.sql
queue_alert_server/src/: app.rs  error.rs  main.rs  models.rs  registration.rs  routes.rs
queue_alert_server/www/: index.html  manifest.json  package.json  webpack.config.js
queue_alert_server/www/src/: index.ts  serviceWorker.ts
queue_times/: Cargo.toml  README.md  queuetimes-format-notes.md
queue_times/src/: api.rs  client.rs  error.rs  lib.rs  model.rs  parser.rs
