[package]
name = "queue_alert_server"
version = "0.1.0"
authors = ["Andy Ealovega <andrew@ealovega.dev>"]
edition = "2018"

[dependencies]
web-push = { version = "0.9.0", features = ["hyper-client"], default-features = false }
queue_times = { version = "0.0.4", features = ["client"] }
base64 = "0.13.0"
dashmap = "4.0.2"
url = "2.2.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
timer = "0.2.0"
chrono = "0.4.19"
flate2 = "1.0.20"

#These are really annoying to keep in sync, but need to be updated as they are in beta.
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
actix-files = "0.6.0-beta.6"
actix-http = "3.0.0-beta.9"
actix-service = "2.0.0"
actix-cors = "0.6.0-beta.2"

tokio = { version = "1", features = ["sync"] }
iis = "0.1.0"

log = "0.4.14"
simplelog = "0.10.0"

[features]
host_iis = ["prod"] #enables the server to be hosted on iis
prod = [] #enabled when any hosting option is selected