[package]
name = "queue_alert_server"
version = "2.1.0"
authors = ["Andy Ealovega <andrew@ealovega.dev>"]
edition = "2021"

[dependencies]
web-push = { version = "^0.9.5", features = ["hyper-client"], default-features = false }
queue_times = { path = "../queue_times", features = ["client"] }
base64 = "^0.13.0"
dashmap = "^5.4.0"
thiserror = "1.0.40"
url = "^2.2.2"
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "^1.0.64"
chrono = "^0.4.19"
flate2 = "^1.0.20"

actix-web = "^4.3.1"
actix-files = "^0.6.2"
actix-http = "^3.3.1"
actix-service = "^2.0.2"
actix-cors = "^0.6.4"

tokio = { version = "^1", features = ["sync"] }
tokio-stream = "0.1.14"
iis = "^0.1.0"

sqlx = { version = "0.7.0-alpha.2", features = [ "runtime-tokio", "sqlite" ] }

log = "^0.4.14"
simplelog = "^0.12.1"

[features]
host_iis = ["prod"] #enables the server to be hosted on iis
prod = [] #enabled when any hosting option is selected