[package]
name = "queue_times"
version = "0.0.1"
authors = ["Andy Ealovega <andrew@ealovega.dev>"]
edition = "2018"
description = "Client for scraping the queue times website."
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["scraping","queue times","amusement park"]

[features]
client = ["reqwest", "async-trait", "dashmap", "chrono", "tokio"]

[dependencies]
scraper = "0.12.0"
error-chain = "0.12.4"
serde = {version = "1.0.126", features = ["derive"]}
url = "2.2.2"

reqwest = {version = "0.11.3", features = ["blocking"], optional = true}
async-trait = {version = "0.1.50", optional = true}
dashmap = {version = "4.0.2", optional = true }
chrono = {version = "0.4.19", optional = true}
tokio = {version = "1.6.1", features = ["macros"], optional = true}