[package]
name = "queue_times"
version = "0.0.5"
authors = ["Andy Ealovega <andrew@ealovega.dev>"]
edition = "2021"
description = "Client for scraping the queue times website."
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["scraping", "queue-times"]
documentation = "https://docs.rs/queue_times/"

[features]
client = ["reqwest", "async-trait", "dashmap", "chrono", "tokio"]

[dependencies]
scraper = "^0.15.0"
error-chain = "^0.12.4"
serde = { version = "^1.0.126", features = ["derive"] }
url = "^2.2.2"
log = "^0.4.14"

reqwest = { version = "^0.11.3", features = ["blocking"], optional = true }
async-trait = { version = "^0.1.50", optional = true }
dashmap = { version = "^5.4.0", optional = true }
chrono = { version = "^0.4.19", optional = true }
tokio = { version = "^1", features = ["macros"], optional = true }

[package.metadata.docs.rs]
all-features = true